syntax = "proto3";

package logcache.v1;

message PromQL{
    message QueryResult {
        oneof Result {
            StringValue string_value = 1;
            Scalar scalar = 2;
            Vector vector = 3;
            Matrix matrix = 4;
        }
    }

    message StringValue {
        int64 time = 1;
        string value = 2;
    }

    message Scalar {
        int64 time = 1;
        double value = 2;
    }

    message Vector {
        repeated Sample samples = 1;
    }

    message Point {
        int64 time = 1;
        double value = 2;
    }

    message Sample {
        map<string, string> metric = 1;
        Point point = 2;
    }

    message Matrix {
        repeated Series series = 1;
    }

    message Series {
        map<string, string> metric = 1;
        repeated Point points = 2;
    }
}
